--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a-gravity></a-gravity>
 
         <!-- Camera setup -->
-        <a-camera position="0 2 5" look-controls>
+        <a-camera position="0 2 5" rotation"-90 0 0" look-controls>
             <a-cursor></a-cursor>
         </a-camera>
     </a-scene>
